--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
         "autosuggest-highlight": "^3.2.0",
         "axios": "^0.24.0",
         "babel-polyfill": "^6.26.0",
+        "body-parser": "^1.20.0",
         "clsx": "^1.1.1",
+        "cors": "^2.8.5",
         "cross-fetch": "^3.1.4",
         "date-fns": "^2.26.0",
         "echarts": "^5.2.2",
         "echarts-for-react": "^3.0.2",
+        "express": "^4.18.1",
         "formik": "^2.2.9",
         "jsonwebtoken": "^8.5.1",
         "jwt-decode": "^3.1.2",
@@ -24,6 +27,8 @@
         "merge": "^2.1.1",
         "moment": "^2.29.1",
         "notistack": "^2.0.3",
+        "pg": "^8.7.3",
+        "pg-hstore": "^2.3.4",
         "prop-types": "^15.7.2",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
@@ -35,6 +40,8 @@
         "react-scripts": "^4.0.3",
         "redux": "^4.1.2",
         "redux-thunk": "^2.4.0",
+        "sequelize": "^6.20.1",
+        "sequelize-cli": "^6.4.1",
         "shortid": "^2.2.16",
         "yup": "^0.32.11"
     },
