--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
         "@emotion/cache": "^11.4.0",
         "@emotion/react": "^11.4.0",
         "@emotion/styled": "^11.3.0",
+        "@material-ui/core": "^4.12.4",
+        "@material-ui/icons": "^4.11.3",
         "@mui/icons-material": "^5.0.3",
         "@mui/lab": "^5.0.0-alpha.50",
         "@mui/material": "^5.0.3",
@@ -20,6 +22,7 @@
         "@testing-library/react": "^11.2.6",
         "@testing-library/user-event": "^12.8.3",
         "apexcharts": "^3.26.1",
+        "axios": "^0.27.2",
         "bluebird": "^3.7.2",
         "clsx": "^1.1.1",
         "cors": "^2.8.5",
@@ -28,6 +31,8 @@
         "framer-motion": "^4.1.13",
         "history": "^5.0.0",
         "keycloak-js": "^18.0.0",
+        "material-table": "^2.0.3",
+        "material-ui-dropzone": "^3.5.0",
         "material-ui-popup-state": "^1.8.0",
         "minio": "^7.0.28",
         "pg": "^8.7.3",
