--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "formik": "^2.2.6",
         "framer-motion": "^4.1.13",
         "history": "^5.0.0",
+        "immutable": "^4.1.0",
         "keycloak-js": "^18.0.0",
         "material-table": "^2.0.3",
         "material-ui-dropzone": "^3.5.0",
@@ -43,6 +44,7 @@
         "react-device-detect": "^1.17.0",
         "react-dom": "^17.0.2",
         "react-hooks-helper": "^1.6.0",
+        "react-json-tree": "^0.17.0",
         "react-perfect-scrollbar": "^1.5.8",
         "react-redux": "^7.2.3",
         "react-router": "6.0.0-beta.0",
