--- a/package.json
+++ b/package.json
@@ -2,12 +2,11 @@
     "name": "dpzui-react",
     "version": "3.0.1",
     "private": true,
-    "homepage": "https://berrydashboard.io",
+    "homepage": "https://dpaportal.apps.xplat.fis.com.vn",
     "dependencies": {
         "@emotion/cache": "^11.4.0",
         "@emotion/react": "^11.4.0",
         "@emotion/styled": "^11.3.0",
-        "@material-ui/core": "^4.12.4",
         "@material-ui/icons": "^4.11.3",
         "@mui/icons-material": "^5.0.3",
         "@mui/lab": "^5.0.0-alpha.50",
@@ -25,8 +24,6 @@
         "axios": "^0.27.2",
         "bluebird": "^3.7.2",
         "clsx": "^1.1.1",
-        "cors": "^2.8.5",
-        "express": "^4.18.1",
         "formik": "^2.2.6",
         "framer-motion": "^4.1.13",
         "history": "^5.0.0",
@@ -35,8 +32,6 @@
         "material-ui-dropzone": "^3.5.0",
         "material-ui-popup-state": "^1.8.0",
         "minio": "^7.0.28",
-        "pg": "^8.7.3",
-        "pg-hstore": "^2.3.4",
         "prop-types": "^15.7.2",
         "react": "^17.0.2",
         "react-apexcharts": "^1.3.7",
@@ -49,7 +44,6 @@
         "react-router-dom": "^6.0.0-beta.0",
         "react-scripts": "^4.0.3",
         "redux": "^4.0.5",
-        "sequelize": "^6.20.1",
         "yup": "^0.32.9"
     },
     "scripts": {
