--- a/package.json
+++ b/package.json
@@ -22,14 +22,12 @@
         "@testing-library/user-event": "^12.8.3",
         "apexcharts": "^3.26.1",
         "axios": "^0.27.2",
-        "bluebird": "^3.7.2",
         "clsx": "^1.1.1",
         "formik": "^2.2.6",
         "framer-motion": "^4.1.13",
         "history": "^5.0.0",
         "keycloak-js": "^18.0.0",
         "material-table": "^2.0.3",
-        "material-ui-dropzone": "^3.5.0",
         "material-ui-popup-state": "^1.8.0",
         "minio": "^7.0.28",
         "prop-types": "^15.7.2",
@@ -37,12 +35,12 @@
         "react-apexcharts": "^1.3.7",
         "react-device-detect": "^1.17.0",
         "react-dom": "^17.0.2",
-        "react-hooks-helper": "^1.6.0",
         "react-perfect-scrollbar": "^1.5.8",
         "react-redux": "^7.2.3",
         "react-router": "6.0.0-beta.0",
         "react-router-dom": "^6.0.0-beta.0",
         "react-scripts": "^4.0.3",
+        "react-step-wizard": "^5.3.11",
         "redux": "^4.0.5",
         "yup": "^0.32.9"
     },
