--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "material-table": "^2.0.3",
         "material-ui-popup-state": "^1.8.0",
         "minio": "^7.0.28",
+        "mui-datatables": "^4.2.2",
         "prop-types": "^15.7.2",
         "react": "^17.0.2",
         "react-apexcharts": "^1.3.7",
