--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "react-apexcharts": "^1.3.7",
         "react-device-detect": "^1.17.0",
         "react-dom": "^17.0.2",
+        "react-google-recaptcha": "^2.1.0",
         "react-hook-form": "^7.33.0",
         "react-perfect-scrollbar": "^1.5.8",
         "react-redux": "^7.2.3",
@@ -43,6 +44,7 @@
         "react-router-dom": "^6.0.0-beta.0",
         "react-scripts": "^4.0.3",
         "react-step-wizard": "^5.3.11",
+        "react-toastify": "^8.1.0",
         "redux": "^4.0.5",
         "yup": "^0.32.9"
     },
