--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "framer-motion": "^4.1.13",
         "gh-pages": "^4.0.0",
         "history": "^5.0.0",
+        "js-cookie": "^3.0.1",
         "keycloak-js": "^18.0.0",
         "material-table": "^2.0.3",
         "material-ui-popup-state": "^1.8.0",
