--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "react-apexcharts": "^1.3.7",
         "react-device-detect": "^1.17.0",
         "react-dom": "^17.0.2",
+        "react-flow-renderer": "^10.3.10",
         "react-google-recaptcha": "^2.1.0",
         "react-hook-form": "^7.33.0",
         "react-perfect-scrollbar": "^1.5.8",
